function disable latlng onclick WIP

--- a/client/templates/map.html
+++ b/client/templates/map.html
@@ -1,3 +1,8 @@
 <template name="map">
-  <div id="map"></div>
+  <div class="map" id="map"></div>
+  <div class="settings" id="settings">
+    <div class="close-settings right" id="close-settings"><i class="fa fa-times"></i></div>
+    <h4 class="center-align">Settings</h4>
+    <p class="latlng" id="latlng"><i class="material-icons left blue-text">room</i>LatLng onclick</p>
+  </div>
 </template>
