--- a/client/css/map.css
+++ b/client/css/map.css
@@ -1,4 +1,21 @@
-div#map {
+div.map {
   height: 600px;
   min-height: 100%;
+  z-index: 4;
+}
+
+div.settings {
+  position: absolute;
+  right: -260px;
+  top: 80px;
+  z-index: 5;
+  width: 250px;
+  height: 200px;
+  background-color: #FFF;
+  padding: 0 15px;
+}
+
+div.close-settings {
+  padding: 10px;
+  cursor: pointer;
 }
