--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -6,6 +6,7 @@
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/"><i class="material-icons left">language</i>Home</a></li>
           <li><a href="/map"><i class="material-icons left">room</i>Map</a></li>
+          <li id="show-settings"><a href="#"><i class="material-icons">settings</i></a></li>
         </ul>
       </div>
     </nav>
